--- a/arturo-morgadanes/.env.local.example
+++ b/arturo-morgadanes/.env.local.example
@@ -5,7 +5,7 @@
 # Email Service (Resend)
 # Get your API key from https://resend.com
 RESEND_API_KEY=re_XXXXXXXXXX
-RESEND_DOMAIN=arturomorgadanes.es
+RESEND_DOMAIN=arturomorgadanes.com
 
 # ===========================================
 # Admin Panel Authentication
